--- a/public/stylesheets/sboard.css
+++ b/public/stylesheets/sboard.css
@@ -3,28 +3,39 @@
     src: url("7seg.ttf");
 }
 
+body{
+    background-color: #222;
+}
+
 .content{
     margin: auto;
     text-align: center;
 }
 
 .number{
-    font-size: 4em;
+    font-size: 6em;
     font-family: '7seg'; 
+    color: #e00;
+    background-color: #222;
+    padding: 10px;
+    border-radius: 10px;
 }
 
 .row{
     display: block;
     width: 100%;
+    background-color: #555;
 }
 
 .col{
     display: inline-block;
     padding: 25px;
+    vertical-align: text-top;
 }
 
 .label{
     font-size: 3em;
+    font-family: 'Russo One', sans-serif;
 }
 
 button{
