--- a/public/stylesheets/sboard.css
+++ b/public/stylesheets/sboard.css
@@ -10,6 +10,11 @@ body{
 .content{
     margin: auto;
     text-align: center;
+    border: 10px solid;
+    border-color: #555;
+    border-radius: 20px;
+    width: 95%;
+    background-color: #555;
 }
 
 .number{
@@ -24,7 +29,6 @@ body{
 .row{
     display: block;
     width: 100%;
-    background-color: #555;
 }
 
 .col{
