--- a/views/sboard.pug
+++ b/views/sboard.pug
@@ -20,6 +20,7 @@ block content
         .number#shot 00
         +timecontrols("shot")
         button(value=btn,id=id+"_"+"shotclock",onclick="shotclock('shot')",class="btn btn-lg btn3d btn-success") shot
+        button(value=btn,id=id+"_"+"shotclock",onclick="shotclock14()",class="btn btn-lg btn3d btn-warning") 14-sec
       .col
         .label Away
         .number#away_points 0
